--- a/frontend/src/components/Body/Body.module.css
+++ b/frontend/src/components/Body/Body.module.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   gap: 30px;
-  padding-top: 0;
+  padding-top: 1rem;
 }
 
 .heading {
@@ -18,55 +18,61 @@
   gap: 40px;
   justify-content: space-between;
   align-items: center;
+  background-color: white;
+  border: #fff;
+  border-radius: 0.2cm;
+  padding: 0.5%;
 }
 
 .colors {
   display: flex;
-  gap: 20px;
-  padding: 0 30px;
+  gap: 0.6rem;
+  padding: 0 0.8rem;
 }
 
 .colors .color {
-  height: 36px;
-  width: 36px;
+  height: 2rem;
+  width: 2rem;
   border-radius: 50%;
   background-color: #239ce2;
 }
 .colors .active {
-  border: 2px solid #000;
+  border: 0.1rem solid #000;
 }
 
 .download_data {
   display: flex;
   flex-direction: row;
-  gap: 5px;
+  gap: 0.5rem;
 }
 
 .toolbar button {
-  padding: 8px 16px;
-  border-radius: 5px;
+  padding: 0.6rem 1.2rem;
+  border-radius: 0.25rem;
+  /* padding: 8px 16px;
+  border-radius: 5px; */
   background-color: #239ce2;
   color: #fff;
   outline: none;
   border: none;
   font-weight: 500;
-  font-size: 1rem;
-  letter-spacing: 1px;
+  /* font-size: 1rem; */
+  letter-spacing: 0.01rem;
   display: flex;
-  gap: 5px;
+  gap: 0.1rem;
   align-items: center;
   cursor: pointer;
 }
 
 .toolbar button svg {
-  height: 20px;
-  width: 20px;
+  height: 0.5rem;
+  width: 0.5rem;
 }
 
 .main {
   display: flex;
   flex-direction: row;
-  gap: 30px;
+  gap: 3rem;
   width: 100%;
 }
 
@@ -88,9 +94,9 @@
   }
 
   .toolbar {
-    width: 90vw;
+    width: 100%;
     display: flex;
-    gap: 40px;
+    gap: 5rem;
     justify-content: space-between;
     align-items: center;
   }
