--- a/frontend/src/components/Resume/Resume.module.css
+++ b/frontend/src/components/Resume/Resume.module.css
@@ -1,24 +1,43 @@
-.container {
+/* .resume {
   --color: #239ce2;
-  /* min-width: 700px;
-  max-width: 850px; */
   margin: 0 auto;
   flex: 1.2;
-  box-shadow: 1px 1px 3px 2px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   gap: 30px;
   padding: 20px;
   height : auto;
+  min-width: 45vw;
+  min-height: 8in;
   width : 100%;
-}
+  background-color: white;
+} */
 
+.resume {
+  --color: #239ce2;
+  margin: 0 auto;
+  /* width: 100%;*/
+  aspect-ratio: 0.77;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+  padding: 1.1rem;
+  /* gap: 30px;
+  padding: 20px; */
+  /* height: 11.69in;
+  width: 8.3in; */
+  width: 100%;
+  max-width: 8.5in;
+  max-height: 11in;
+}
 .header {
   display: flex;
   flex-direction: column;
 }
 
 .header .heading {
+  /* font-size: 2.7rem; */
   font-size: 2.7rem;
   font-weight: 500;
   text-transform: capitalize;
@@ -27,68 +46,79 @@
 .header .subHeading {
   color: var(--color);
   font-weight: 500;
+  /* font-size: 1.1rem; */
   font-size: 1.1rem;
 }
 
 .header .links {
-  margin-top: 15px;
+  margin-top: 0.4rem;
   display: flex;
-  gap: 30px;
+  gap: 0.8rem;
   flex-wrap: wrap;
-  row-gap: 10px;
+  row-gap: 0.2rem;
 }
 
 .header .link {
+  /* font-size: 0.875rem; */
   font-size: 0.875rem;
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 0.5rem;
   cursor: pointer;
 }
 
 .header .link svg {
   color: var(--color);
-  height: 16px;
-  width: 16px;
+  height: 0.85rem;
+  width: 0.85rem;
+  /* height: 16px;
+  width: 16px; */
 }
 
 .main {
   display: flex;
-  gap: 30px;
+  gap: 1rem;
+  /* gap: 30px; */
 }
 
 .col1 {
   flex: 1.3;
   display: flex;
   flex-direction: column;
-  gap:5px;
+  gap: 1rem;
 }
 .col2 {
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 1rem;
 }
 
 .section .sectionTitle {
-  font-size: 1.3rem;
+  font-size: 1.1rem;
+  /* font-size: 1.3rem; */
   font-weight: bold;
   width: 100%;
-  border-bottom: 2px solid #000;
+  border-bottom: 0.12rem solid #000;
 }
 
 .section .content {
   display: flex;
   flex-direction: column;
-  gap: 1px;
-  padding: 10px 0;
+  gap: 0.1rem;
+  padding: 0.08rem 0rem;
+  /* gap: 1px;
+  padding: 10px 0; */
 }
 .section .content .item {
-  border-bottom: 1px dotted lightgray;
+  border-bottom: 0.02rem dotted lightgray;
   display: flex;
   flex-direction: column;
-  gap: 2px;
-  padding-bottom: 10px;
+  gap: 0.2rem;
+  padding-bottom: 0.3rem;
+  padding-top: 0.3rem;
+  /* gap: 2px;
+  padding-bottom: 10px; */
 }
 .section .content .item:last-child {
   border-bottom: none;
@@ -101,65 +131,78 @@
 
 .section .content .item .row1{
   display: flex;
-  gap:4px;
+  gap:0.5rem;
 }
 
 .content .title {
   font-weight: 500;
   font-size: 0.94rem;
-  line-height: 1.1rem;
+  /* font-size: 0.94rem; */
+  line-height: 1rem;
   color:navy;
 }
 
 .content .type {
   font-weight: 400;
+  /* font-size: 0.8rem; */
   font-size: 0.8rem;
-  line-height: 1.2rem;
+  line-height: 1rem;
 }
 
 .content .result{
   font-size: 0.84rem;
+  /* font-size: 0.84rem; */
 }
 
 .content .subTitle {
   font-weight: bold;
   color: var(--color);
   font-size: 0.84rem;
+  /* font-size: 0.84rem; */
 }
 
 .content .overview {
   font-size: 0.84rem;
+  /* font-size: 0.84rem; */
 }
 
 .content .link {
   display: flex;
-  gap: 5px;
-  font-size: 0.75rem;
+  gap: 0.15rem;
+  font-size: 0.65rem;
+  /* font-size: 0.75rem; */
   cursor: pointer;
   color: var(--color);
 }
 .content .link svg {
-  height: 14px;
-  width: 14px;
+  height: 0.75rem;
+  width: 0.75rem;
+  /* height: 14px;
+  width: 14px; */
   color: var(--color);
 }
 
 .content .date {
   display: flex;
-  gap: 5px;
+  gap: 0.15rem;
   align-items: center;
-  font-size: 0.875rem;
+  font-size: 0.75rem;
+  /* font-size: 0.875rem; */
 }
 
 .content .date svg {
-  height: 14px;
-  width: 14px;
+  height: 0.75rem;
+  width: 0.75rem;
+  /* height: 14px;
+  width: 14px; */
 }
 
 .content .points,
 .numbered {
-  padding-left: 18px;
+  padding-left: 1rem;
   font-size: 0.84rem;
+  /* padding-left: 18px;
+  font-size: 0.84rem; */
 }
 
 .numbered li {
@@ -172,20 +215,21 @@
 
 .skill {
   display: inline-block;
-  padding: 2px 2px;
-  margin: 2px;
-  border: 1px solid #000;
-  border-radius: 5px;
+  padding: 0.1rem 0.1rem;
+  margin: 0.1rem;
+  border: 0.05rem solid #000;
+  border-radius: 0.25rem;
   font-size: 0.85rem;
+  /* font-size: 0.85rem; */
 }
 
-.skillContainer{
+.skillresume{
   display: flex;
   flex-wrap: wrap;
 }
 
-@media only screen and (min-width:1300){
-  .container {
+/* @media only screen and (min-width:1300){
+  .resume {
     flex-grow:1;
     --color: #239ce2;
     margin: 0 auto;
@@ -203,7 +247,7 @@
 }
 
 @media only screen and (max-width:1300px){
-  .container {
+  .resume {
     --color: #239ce2;
     margin: 0 auto;
     flex: 1.2;
@@ -216,4 +260,4 @@
     max-width: 11.69in;
     width : 90vw;
   }
-}
+} */
