--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,3 +4,11 @@
   box-sizing: border-box;
   font-family: sans-serif;
 }
+
+.app {
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
